Kleine SASS Erweiterungen

--- a/src/assets/Main.sass
+++ b/src/assets/Main.sass
@@ -1,16 +1,9 @@
 @import "Login"
-
+@import "DashboardMain"
+@import "Variables"
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap')
 
-$font: 'Montserrat', sans-serif !important
-$backgroundcolor: #eee
-$rosblue: #0044b2
-$smalltextsize: 13px
-$normaltextsize: 16px
-$headingsize: 25px
-$filenamesize: 14px
-$linkinblack: black
 
 
 #app
@@ -32,6 +25,7 @@ $linkinblack: black
 
   .filenamesize
     font-size: $filenamesize!important
+    margin: unset
 
   .linkinblack
     color: $linkinblack!important
