Bugfixes, Passwort zurücksetzen, Entries unbenennen, SASS Verbesserungen

--- a/src/assets/Main.sass
+++ b/src/assets/Main.sass
@@ -24,7 +24,7 @@
     font-size: $normaltextsize!important
 
   .filenamesize
-    font-size: $filenamesize!important
+    font-size: $normaltextsize!important
     margin: unset
 
   .linkinblack
