--- a/src/assets/_Login.sass
+++ b/src/assets/_Login.sass
@@ -8,3 +8,8 @@
     .v-card:not(.v-sheet--tile):not(.v-card--shaped)
       border-radius: 0px !important
 
+  .heading
+    font-size: 26px
+
+  .buttons
+    font-size: 16px
